Fix bug that occurrs when user selects a different team while on a specific project show page. (The project would remain visible even after switching to a different team / workspace to which the project does NOT belong.) Now clicking on a different team links to the home page

--- a/app/assets/stylesheets/dropdowns/avatar_dropdown.css
+++ b/app/assets/stylesheets/dropdowns/avatar_dropdown.css
@@ -40,6 +40,10 @@
     text-decoration: none;
     color: #151b26;
     padding-left: 5px;
+    min-width: 252px;
+    height: 40px;
+    display: flex;
+    align-items: center;
 }
 
 .avatar-dropdown-menu > section {
